Обновлен ClientDashboardController: исправлена логика отображения курсов и уроков

--- a/resources/js/client-dashboard/index.html
+++ b/resources/js/client-dashboard/index.html
@@ -3,12 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Laravel с Vue 3</title>
-    @vite(['resources/css/app.css', 'resources/js/app.js'])
+    <title>Agentterra Learning Hub</title>
 </head>
 <body>
-<div id="app">
-    <example-component></example-component>
-</div>
+<div id="app"></div>
+<script type="module" src="/src/main.js"></script>
 </body>
 </html>
